--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "5.0.*",
-        "mockery/mockery": "~0.9.4"
+        "mockery/mockery": "~0.9.4",
+        "satooshi/php-coveralls": "~0.6.1"
     },
     "autoload": {
         "psr-4": {
