--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "require-dev": {
         "phpunit/phpunit": "5.0.*",
         "mockery/mockery": "~0.9.4",
-        "satooshi/php-coveralls": "~0.6.1"
+        "satooshi/php-coveralls": "^1.0"
     },
     "autoload": {
         "psr-4": {
