--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=5.6",
-        "symfony/event-dispatcher": "~2.7.7"
+        "symfony/event-dispatcher": "^2.7||^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.0.*",
-        "mockery/mockery": "~0.9.4",
+        "phpunit/phpunit": "^5.7",
+        "mockery/mockery": "^0.9",
         "satooshi/php-coveralls": "^1.0"
     },
     "autoload": {
